force-app/main/default/objects/Interaction_Connector__c/Interaction_Connector__c.object-meta.xml
<CustomObject>
    <description>Objeto intermedio que relacion las interacciones con CASOS u OPORTUNIDADES</description>
    <label>Interaction Connector</label>
    <nameField>
        <displayFormat>IC-{0000000}</displayFormat>
        <label>Interaction Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions Connector</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>