force-app/main/default/objects/Interaction_Connector__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Interactions Connector</relationshipLabel>
    <relationshipName>Interactions_Connector</relationshipName>
    <type>Lookup</type>
</CustomField>