force-app/main/default/objects/Interaction_Connector__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Interactions Connector</relationshipLabel>
    <relationshipName>Interactions_Connector</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>