force-app/main/default/objects/Interaction_Connector__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interactions Connector</relationshipLabel>
    <relationshipName>Interactions_Connector</relationshipName>
    <type>Lookup</type>
</CustomField>