force-app/main/default/objects/Interaction_Connector__c/listViews/admin_Interaction_Connector.listView-meta.xml
<ListView>
    <fullName>admin_Interaction_Connector</fullName>
    <filterScope>Queue</filterScope>
    <label>jcobdwardenel@gmail.com</label>
    <queue>admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>